--- a/vector-addition_en.html
+++ b/vector-addition_en.html
@@ -46,7 +46,9 @@
       '../sherpa/lib/game-up-camera-1.0.0.js',
       '../sherpa/lib/base64-js-1.2.0.js',
       '../sherpa/lib/TextEncoderLite-3c9f6f0.js',
-      '../tandem/js/PhetioIDUtils.js'
+      '../tandem/js/PhetioIDUtils.js',
+      '../sherpa/lib/katex-0.5.1-css-all.js',
+      '../sherpa/lib/katex-0.5.1.min.js'
     ];
 
     if ( brand === 'phet-io' ) {
@@ -76,7 +78,8 @@
     preloads.forEach( loadURL );
 
     loadURL( '../sherpa/lib/require-2.3.6.js', 'js/vector-addition-config.js' );
-  } )();
+  } )
+  ();
 </script>
 </body>
 </html>
