Validate that types and type metadata are identical, grunt update all repos, see https://github.com/phetsims/phet-io/issues/1515

--- a/vector-addition_en.html
+++ b/vector-addition_en.html
@@ -54,7 +54,8 @@
     preloads = preloads.concat( [
       '../phet-io/js/phet-io-initialize-globals.js',
       '../vector-addition/js/phet-io/vector-addition-phet-io-elements-baseline.js',
-      '../vector-addition/js/phet-io/vector-addition-phet-io-elements-overrides.js'
+      '../vector-addition/js/phet-io/vector-addition-phet-io-elements-overrides.js',
+      '../vector-addition/js/phet-io/vector-addition-phet-io-types.js'
     ] );
   }
 
