--- a/vector-addition_en.html
+++ b/vector-addition_en.html
@@ -50,8 +50,7 @@
     '../sherpa/lib/base64-js-1.2.0.js',
     '../sherpa/lib/TextEncoderLite-3c9f6f0.js',
     '../tandem/js/PhetioIDUtils.js',
-    '../sherpa/lib/katex-0.11.0-css-all.js',
-    '../sherpa/lib/katex-0.11.0.min.js'
+    '../chipper/js/SimVersion.js'
   ];
 
   if ( brand === 'phet-io' ) {
