Adding screenNameKeys to package.json (and adding some translated strings to some runnables), see https://github.com/phetsims/chipper/issues/1367

--- a/vector-addition_en.html
+++ b/vector-addition_en.html
@@ -43,10 +43,35 @@
         ],
         "simulation": true,
         "supportsOutputJS": true,
-        "published": true
+        "published": true,
+        "screenNameKeys": [
+          "VECTOR_ADDITION/screen.explore1D",
+          "VECTOR_ADDITION/screen.explore2D",
+          "VECTOR_ADDITION/screen.lab",
+          "VECTOR_ADDITION/screen.equations"
+        ]
       },
       "eslintConfig": {
-        "extends": "../chipper/eslint/sim_eslintrc.js"
+        "extends": "../chipper/eslint/sim_eslintrc.js",
+        "overrides": [
+          {
+            "files": [
+              "**/*.ts"
+            ],
+            "rules": {
+              "@typescript-eslint/no-explicit-any": "error",
+              "@typescript-eslint/ban-ts-comment": [
+                "error",
+                {
+                  "ts-expect-error": true,
+                  "ts-ignore": true,
+                  "ts-check": true,
+                  "ts-nocheck": true
+                }
+              ]
+            }
+          }
+        ]
       }
     };
   window.phet.chipper.stringRepos =
