--- a/vector-addition_en.html
+++ b/vector-addition_en.html
@@ -22,7 +22,7 @@
   window.phet.chipper.packageObject =
     {
       "name": "vector-addition",
-      "version": "1.1.0-dev.1",
+      "version": "1.1.0-dev.2",
       "license": "GPL-3.0",
       "repository": {
         "type": "git",
@@ -63,7 +63,7 @@
               "@typescript-eslint/ban-ts-comment": [
                 "error",
                 {
-                  "ts-expect-error": true,
+                  "ts-expect-error": false,
                   "ts-ignore": true,
                   "ts-check": true,
                   "ts-nocheck": true
