enable sound in package.json, https://github.com/phetsims/vector-addition/issues/291

--- a/vector-addition_en.html
+++ b/vector-addition_en.html
@@ -43,6 +43,7 @@
           "adapted-from-phet"
         ],
         "simFeatures": {
+          "supportsSound": true,
           "supportsDynamicLocale": true,
           "colorProfiles": [
             "default"
