--- a/vector-addition_en.html
+++ b/vector-addition_en.html
@@ -44,6 +44,7 @@
         ],
         "simFeatures": {
           "supportsSound": true,
+          "supportsInteractiveDescription": true,
           "supportsDynamicLocale": true,
           "colorProfiles": [
             "default"
