opt out of CT phet-io validation, https://github.com/phetsims/vector-addition/issues/258

--- a/vector-addition_en.html
+++ b/vector-addition_en.html
@@ -51,6 +51,9 @@
             "default"
           ]
         },
+        "phet-io": {
+          "validation": false
+        },
         "simulation": true,
         "supportsOutputJS": true,
         "published": true,
