add "supportsTier1Voicing": true

--- a/vector-addition_en.html
+++ b/vector-addition_en.html
@@ -47,6 +47,7 @@
           "supportsSound": true,
           "supportsInteractiveDescription": true,
           "supportsDynamicLocale": true,
+          "supportsTier1Voicing": true,
           "colorProfiles": [
             "default"
           ]
