fix instrumentation of angleVisibleProperty, add compareDesignedAPIChanges: true, https://github.com/phetsims/vector-addition/issues/295

--- a/vector-addition_en.html
+++ b/vector-addition_en.html
@@ -52,7 +52,7 @@
           ]
         },
         "phet-io": {
-          "validation": false
+          "compareDesignedAPIChanges": true
         },
         "simulation": true,
         "supportsOutputJS": true,
